Prevent wrapping heads.

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,7 @@ h1 {
 	font-weight: 200;
 }
 
+
 h2 {
 	padding-bottom: 0.5em;
 	width: fit-content;
@@ -51,6 +52,10 @@ h2 {
 
 h2, header, hr {
 	border-bottom: 0.1em solid;
+}
+
+h1, h2 {
+	white-space: pre;
 }
 
 h2, h3 {
